--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
+    "multer": "^1.4.2",
+    "razorpay": "^2.0.6",
     "underscore": "^1.11.0"
   }
 }
