--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.9.7",
     "multer": "^1.4.2",
     "razorpay": "^2.0.6",
+    "request": "^2.88.2",
     "underscore": "^1.11.0"
   }
 }
